# coffee

./: .gitignore  CMakeLists.txt  LICENSE  README.md  appveyor.yml  bookdelegate.cpp  bookdelegate.h  books.pro  bookwindow.cpp  bookwindow.h  coffee.pro  coffee.sln  coffee.vcxproj  coffeedelegate.cpp  coffeedelegate.h  coffees.qrc  coffeewindow.cpp  coffeewindow.h  coffeewindow.ui  databasemamager.cpp  databasemamager.h  initdb.h  main.cpp  tablemodelutils.h
.github/actions/: action.yml
.github/actions/install-dependencies/: action.yml  install-dependencies.sh
.github/actions/setup-environment/: action.yml  setup-environment.sh
.github/workflows/: build_windows.yml  ci.yml  release_windows.yml
src/: coffeedelegate.cpp  coffeedelegate.h  coffees.qrc  coffeewindow.cpp  coffeewindow.h  coffeewindow.ui  main.cpp  tablemodelutils.h
